--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -1,19 +1,3 @@
-*,
-*:before,
-*:after{
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	box-sizing:border-box;
-}
-*:focus,
-*:active,
-input::-moz-focus-inner { /* dotted outline */
-	outline: 0;
-	border: 0;
-}
-input:focus-visible {
-	outline: none;
-}
 .infobtn,
 #infoOverlay input[type=radio],
 #infoOverlay input[type=checkbox] {
@@ -131,7 +115,7 @@ hr {
 	line-height: 40px;
 	color: var( --cg60 );
 }
-#infoTop a, white {
+#infoTop a {
 	color: var( --cw );
 }
 #infoTop .albumrefresh {
@@ -350,7 +334,6 @@ hr {
 #infoContent .selectric-wrapper {
 	margin: 0;
 }
-#infoOverlay white,
 #infoOverlay code,
 #infoContent .selectric-items ul {
 	color: var( --cw );
