--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -40,51 +40,9 @@
 	z-index: 112;
 }
 #loader {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	z-index: 110;
 	background: #000000;
 }
-#loader svg {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 50px;
-	animation: blinkopaque 1.5s linear infinite;
-}
-#loader rect {
-	fill: var( --cm );
-}
-#loader path {
-	fill: var( --cw );
-}
-
-*,
-*:before,
-*:after {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-*:focus {
-	outline: none;
-}
-html {
-	padding: env( safe-area-inset ); /* disable iPhone X rounded corner padding */
-}
-body {
-	margin: 0;
-	font-family: "Lato";
-	font-size: 15px;
-	line-height: 1.42857143;
-	color: var( --cw );
-	background-color: #000;
-	overscroll-behavior: none; /* disable android pull-down refresh */
-}
+body { font-size: 15px }
 head,
 #bar-bottom {
 	box-shadow: 0 0 10px 4px #000000;
@@ -92,7 +50,6 @@ head,
 #bar-bottom .active {
 	background: var( --cm );
 }
-.hide{ display: none !important; }
 a,
 a:hover {
 	color: var( --cml );
@@ -141,17 +98,7 @@ pre {
 .help-block p {
 	margin: 0 0 0 10px;
 }
-w, wh, .wh { color: var( --cw ) !important; }
-bl, .bl, .blue { color: var( --cm ) !important; }
-bll { color: var( --cml ) !important; }
-gr, .gr, grl { color: var( --cg60 ) !important; }
-.gra { color: var( --cgl ) !important; }
-red, .red { color: #f00; }
-grn, .green { color: #0f0; }
 .clear { clear: both; }
-.bgr { background: var( --cgd ); }
-whl,
-grl,
 heading {
 	display: inline-block;
 	margin: 25px 0 10px 0;
@@ -189,12 +136,6 @@ heading i.fa-question-circle {
 	float: right;
 	width: 25px;
 	font-size: 20px;
-}
-@keyframes blinkopaque {
-	50% { opacity: 0; }
-}
-.blink {
-	animation: blinkopaque 1.5s linear infinite;
 }
 .head {
 	position: fixed;
