--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -333,13 +333,13 @@ i.map.disabled, .map.disabled i {
 	padding: 120px 0 60px;
 }
 /* ---------------------- info ----------------------*/
-#artist, #song, #album {
+#artist, #title, #album {
 	display: table; /* allow get width */
 	margin: 0 auto;
 	text-align: center;
 	white-space: nowrap;
 }
-#divsong {
+#divtitle {
 	height: 34px;
 	height: 34px;
 	line-height: 34px;
@@ -360,8 +360,8 @@ i.map.disabled, .map.disabled i {
 #divalbum {
 	height: 25px;
 }
-#song,
 #artist,
+#title,
 #album {
 	visibility: hidden; /* fix - flashed by scrollLongText() */
 	overflow: hidden;
@@ -416,7 +416,7 @@ i.map.disabled, .map.disabled i {
 #sampling .station { display: inline; }
 /* ---------------------- info scrolling ----------------------*/
 #divartist,
-#divsong,
+#divtitle,
 #divalbum {
 	position: relative;
 	overflow: hidden;
@@ -1262,11 +1262,6 @@ i.map.disabled, .map.disabled i {
 	width: calc(100vw - 510px) !important;
 }
 
-@media ( hover:hover ) {
-	#song {
-		cursor: pointer;
-	}
-}
 @media (max-width: 500px) {
 	#lyrics {
 		top: 0;
