--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -181,7 +181,7 @@ i.map.disabled, .map.disabled i {
 	text-align: center;
 	font-size: 22px;
 	color: var( --cw );
-	text-shadow: -1px 1px 2px #000000;
+	text-shadow: -1px 0 2px #000000;
 }
 .menu i.gr {
 	color: var( --cg60 ) !important;
