--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -25,7 +25,7 @@
 	text-align: center;
 	font-size: 22px;
 	color: var( --cw );
-	text-shadow: -1px 1px 2px #000000;
+	text-shadow: -1px 0 2px #000000;
 }
 
 #button-data {
