--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -408,6 +408,7 @@ i.map.disabled, .map.disabled i {
 	margin-right: 8px;
 }
 #sampling {
+	font-size: 14px;
 	text-align: center;
 	color: var( --cg60 );
 	text-transform: none;
