--- a/srv/http/assets/css/colors.css
+++ b/srv/http/assets/css/colors.css
@@ -13,3 +13,31 @@
 	--cga:  hsl(200,3%,20%);   /* gray-active */
 	--cgd:  hsl(200,3%,10%);   /* gray-dark */
 }
+
+bl, blb, .bl {
+	color: var( --cm ) !important
+}
+bll {
+	color: var( --cml ) !important;
+}
+gr, grl, grw, .gr, .grl {
+	color: var( --cg60 ) !important
+}
+grn, .grn {
+	color: #0f0
+}
+red, .red {
+	color: #f00
+}
+.yl {
+	color: yellow
+}
+w, wh, whl, .wh {
+	color: var( --cw ) !important
+}
+.bgr {
+	background: var( --cgd ) !important
+}
+.bgr60 {
+	background-color: var( --cg60 ) !important
+}
