--- a/srv/http/assets/css/desktop.css
+++ b/srv/http/assets/css/desktop.css
@@ -128,6 +128,7 @@ li:not( .licover ),
 #lyricsartist,
 #mode-webradio-new,
 #pl-manage i,
+#pl-search-close,
 #playlist-empty,
 #sampling i,
 #taglabel,
