--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1395,8 +1395,9 @@ i.map.disabled, .map.disabled i {
 	margin: 0 !important;
 	border: 1px solid hsl(0,0%,30%);
 }
-.bkedit.iconcover {
-	margin: 0 5px 5px 0 !important;
+.bkedit .iconcover {
+	top: 5px;
+	position: relative;
 }
 #infoTop .iconcover {
 	margin-top: 5px !important;
