--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -383,17 +383,9 @@ i.map.disabled, .map.disabled i {
 .scrollleft {
 	backface-visibility : hidden; /* for less flickering */
 }
-@-moz-keyframes scrollleft {
-	0%   { -moz-transform    : translateX( 100vw ) } /* move right 100vw = viewport = visible text width */
-	100% { -moz-transform    : translateX( -100% ) } /* move left  100%  = window   = full text width */
-}
-@-webkit-keyframes scrollleft {
-	0%   { -webkit-transform : translateX( 100vw ) }
-	100% { -webkit-transform : translateX( -100% ) }
-}
 @keyframes scrollleft {
-	0%   { transform         : translateX( 100vw ) }
-	100% { transform         : translateX( -100% ) }
+	0%   { transform : translateX( calc( 100vW + 15px ) ) } /* move to right 100vw (+15px fix ios safari flashes on start) */
+	100% { transform : translateX( -100% ) }                /* scroll to left 100% text width */
 }
 /* ---------------------- knobs, buttons ----------------------*/
 #playback-row {
