--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -384,8 +384,8 @@ i.map.disabled, .map.disabled i {
 	backface-visibility : hidden; /* for less flickering */
 }
 @keyframes scrollleft {
-	0%   { transform : translateX( calc( 100vW + 15px ) ) } /* move to right 100vw (+15px fix ios safari flashes on start) */
-	100% { transform : translateX( -100% ) }                /* scroll to left 100% text width */
+	0%   { transform : translateX( 100vW ) } /* move to right 100vw */
+	100% { transform : translateX( -100% ) } /* scroll to left 100% text width */
 }
 /* ---------------------- knobs, buttons ----------------------*/
 #playback-row {
