--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -94,40 +94,34 @@ input::-moz-focus-inner {
 .fa-airplay::before { content: "\f580" }
 .fa-album::before { content: "\f555" }
 .fa-albumartist::before { content: "\f557" }
-.fa-arrow-down::before { content: "\f601" }
 .fa-arrow-left::before { content: "\f602" }
 .fa-arrow-right::before { content: "\f603" }
-.fa-arrow-up::before { content: "\f600" }
 .fa-artist::before { content: "\f556" }
 .fa-audiocd::before { content: "\f538" }
-.fa-backspace:before { content: "\f60C" }
+.fa-backspace:before { content: "\f608" }
 .fa-bars::before { content: "\f51C" }
 .fa-bio::before { content: "\f51D" }
 .fa-bookmark::before { content: "\f550" }
 .fa-bluetooth::before { content: "\f595" }
 .fa-bluetooth-client::before { content: "\f596" }
 .fa-brush::before { content: "\f536" }
-.fa-capslock:before { content: "\f60B" }
+.fa-capslock:before { content: "\f607" }
 .fa-check::before { content: "\f51B" }
 .fa-chevron-down::before { content: "\f605" }
 .fa-chevron-up::before { content: "\f604" }
 .fa-chromium::before { content: "\f584" }
 .fa-composer::before { content: "\f558" }
 .fa-conductor::before { content: "\f559" }
-.fa-coverart::before { content: "\f593"; position: absolute; color: var( --cw ); }
-.fa-coverart::after { content: "\f594"; color: #000000; opacity: 0.75; text-shadow: none; }
 .fa-coverart-refresh::before { content: "\f53D" }
 .fa-crop::before { content: "\f568" }
 .fa-date::before { content: "\f55C" }
 .fa-dice::before { content: "\f569" }
-.fa-download::before { content: "\f528" }
-.fa-edit::before { content: "\f565" }
-.fa-edit-circle::before { content: "\f566" }
-.fa-eye::before { content: "\f56B" }
+.fa-edit-circle::before { content: "\f565" }
+.fa-eye::before { content: "\f567" }
 .fa-features::before { content: "\f50B" }
 .fa-file-music::before { content: "\f549" }
 .fa-file-playlist::before { content: "\f548" }
-.fa-flash::before { content: "\f567" }
+.fa-flash::before { content: "\f566" }
 .fa-folder::before { content: "\f540" }
 .fa-folder-cascade::before { content: "\f54A" }
 .fa-folder-forbid::before { content: "\f537" }
@@ -148,7 +142,6 @@ input::-moz-focus-inner {
 .fa-lastfm::before { content: "\f585" }
 .fa-lcd::before { content: "\f577" }
 .fa-lcdchar::before { content: "\f578" }
-.fa-left::before { content: "\f606" }
 .fa-library::before { content: "\f506" }
 .fa-lock::before { content: "\f574"; }
 .fa-lyrics::before { content: "\f54B" }
@@ -179,14 +172,14 @@ input::-moz-focus-inner {
 .fa-power::before { content: "\f520" }
 .fa-previous::before { content: "\f501" }
 .fa-question-circle::before { content: "\f560" }
-.fa-radiofrance::before { content: "\f589" }
-.fa-radioparadise::before {content: "\f59C"; position: absolute; color: var( --cgl ); }
-.fa-radioparadise::after {content: "\f59D"; position: relative; } /* position: relative - fix order */
+.fa-radiofrance::before { content: "\f586" }
+.fa-radioparadise::before {content: "\f593"; position: absolute; color: var( --cgl ); }
+.fa-radioparadise::after {content: "\f594"; position: relative; } /* position: relative - fix order */
 .fa-random::before { content: "\f512" }
 .fa-reboot::before { content: "\f521" }
 .fa-redo::before { content: "\f524" }
 .fa-refresh::before { content: "\f526" }
-.fa-refresh-l::before { content: "\f52B" }
+.fa-refresh-l::before { content: "\f528" }
 .fa-refresh-library::before { content: "\f536" }
 .fa-relays::before { content: "\f522" }
 .fa-reload::before { content: "\f525" }
@@ -195,7 +188,6 @@ input::-moz-focus-inner {
 .fa-replace::before { content: "\f531" }
 .fa-reset::before { content: "\f527" }
 .fa-restore::before { content: "\f544" }
-.fa-right::before { content: "\f607" }
 .fa-save::before { content: "\f542"}
 .fa-save-circle::before { content: "\f546"}
 .fa-save-plus::before { content: "\f545"}
@@ -205,7 +197,7 @@ input::-moz-focus-inner {
 .fa-sd::before { content: "\f543" }
 .fa-search::before { content: "\f56A" }
 .fa-set0::before { content: "\f515" }
-.fa-shift:before { content: "\f60A" }
+.fa-shift:before { content: "\f606" }
 .fa-shuffle::before { content: "\f513" }
 .fa-single::before { content: "\f514" }
 .fa-sliders::before { content: "\f50B" }
