--- a/srv/http/assets/css/selectric.css
+++ b/srv/http/assets/css/selectric.css
@@ -20,7 +20,7 @@
 	display: block;
 	height: 39px;
 	margin: 0 30px 0 10px;
-	line-height: 2.67;
+	line-height: 40px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -36,7 +36,7 @@
 	bottom: 0;
 	width: 30px;
 	font-size: 20px;
-	line-height: 2;
+	line-height: 40px;
 	text-align: center;
 }
 .selectric .button:before {
@@ -119,7 +119,7 @@ select,
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	line-height: 1.33;
+	line-height: 20px;
 	min-height: 20px;
 }
 .selectric-items li {
