Revert "Update info.css"
This reverts commit da82385360552a28459fec0ff79b91df785a9a7b.

--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -20,7 +20,7 @@
 	min-width: 70px;
 	height: 34px !important;
 	padding: 0 10px;
-	line-height: 2.43;
+	line-height: 34px;
 	border: none;
 	border-radius: 4px;
 	white-space: nowrap;
@@ -102,6 +102,7 @@ hr {
 	float: left;
 	width: calc( 100% - 40px );
 	color: var( --cw );
+	line-height: 40px;
 	padding: 0 0 0 5px;
 	text-align: left;
 }
@@ -111,7 +112,7 @@ hr {
 	margin-left: 5px;
 	text-align: center;
 	font-size: 28px;
-	line-height: 1.43;
+	line-height: 40px;
 	color: var( --cg60 );
 }
 #infoTop a {
@@ -129,7 +130,7 @@ hr {
 }
 #infoTop .imgicon i {
 	position: absolute;
-	line-height: 1.43;
+	line-height: 32px;
 }
 #infoTop .imgicon img {
 	width: 30px;
@@ -138,7 +139,7 @@ hr {
 #infoX {
 	float: right;
 	width: 40px;
-	line-height: 1.43;
+	line-height: 40px;
 	border-radius: 0 10px 0 0;
 	padding: 0;
 	font-size: 28px;
@@ -150,7 +151,7 @@ hr {
 	width: calc( 100% - 45px );
 	margin-left: 10px;
 	font-size: 18px;
-	line-height: 2.3;
+	line-height: 40px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -253,7 +254,7 @@ hr {
 	outline: none;
 	font-family: Inconsolata;
 	font-size: 15px;
-	line-height: 1.33;
+	line-height: 20px;
 	tab-size: 4;
 	color: var( --cw );
 	background: var( --cgd );
@@ -341,7 +342,7 @@ hr {
 #infoContent .selectric-items li {
 	height: 34px;
 	text-align: left;
-	line-height: 1;
+	line-height: 16px;
 }
 #infoContent .selectric-items {
 	min-width: 100%;
@@ -349,10 +350,10 @@ hr {
 #infoContent .selectric .label {
 	margin: 1px 0;
 	padding: 0 10px;
-	line-height: 2.43;
 }
+#infoContent .selectric .label,
 #infoContent .selectric .button {
-	line-height: 1.7;
+	line-height: 34px;
 }
 #infoRange input {
 	height: 40px;
@@ -435,7 +436,7 @@ hr {
 #infoOverlay code {
 	display: inline-block;
 	padding: 3px;
-	line-height: 0.875;
+	line-height: 14px;
 	border-radius: 3px;
 	background: #000000;
 	font-family: Inconsolata;
