--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1901,9 +1901,7 @@ li.active .li1 bl {
 	padding: 5px 10px 0 0;
 }
 #pl-list .li1 a {
-	display: inline-block;
 	max-width: calc( 100% - 105px );
-	vertical-align: middle;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -1921,9 +1919,10 @@ li.active .li1 bl {
 #pl-list .elapsed i {
 	margin-right: 5px;
 	width: 20px;
+	line-height: 17px; /* for ios */
 }
 #pl-list .elapsed {
-	margin: -4px 3px 0 7px;
+	margin: 0 3px 0 7px;
 }
 #lib-list .li2,
 #pl-list .li2,
