--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -55,7 +55,7 @@ ib {
 }
 #play-group .disabled {
 	color: var( --cg60 ) !important;
-	background-color: var( --cga ) !important;
+	background-color: var( --cgd ) !important;
 }
 #divcolor .infobtn {
 	margin: 0;
