--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -44,6 +44,7 @@
 .infobtn.disabled {
 	color: var( --cg60 ) !important;
 	background-color: var( --cgd ) !important;
+	box-shadow: none;
 	pointer-events: none;
 }
 .noclick {
@@ -310,10 +311,12 @@ hr {
 #infoOverlay input[type=checkbox]:checked:disabled,
 #infoOverlay input[type=radio]:checked:disabled {
 	background-color: var( --cmd );
+	box-shadow: none;
 }
 #infoOverlay input[type=checkbox]:disabled,
 #infoOverlay input[type=radio]:disabled {
 	background-color: var( --cgd );
+	box-shadow: none;
 }
 #infoContent button {
 	height: 40px;
